--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -1,162 +1,172 @@
 <div class="user-sidebar-container">
-{{#if isOwnProfile}}
-<div class="row mb-3">
-  <div class="col-6 d-flex">
-    {{/if}}
-    <div id="profileImageContainer" class="{{#if isOwnProfile}}own-profile-image{{else}}user-image{{/if}}">
-      <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage"
-        src="{{#if profileData.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
+  {{#if isOwnProfile}}
+  <div class="row mb-3">
+    <div class="col-6 d-flex">
+      {{/if}}
+      <div id="profileImageContainer" class="{{#if isOwnProfile}}own-profile-image{{else}}user-image{{/if}}">
+        <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage"
+          src="{{#if profileData.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
+      </div>
+      {{#if isOwnProfile}}
     </div>
-    {{#if isOwnProfile}}
-  </div>
-  <div class="col-6 d-flex align-items-start">
-    <div id="profileControlsDesktopMobile" class="button-group">
-      <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i
-          class="fas fa-pencil-ruler"></i> See drafts</a>
-      <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal"
-        data-target="#updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
-      <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
-      <a href="/logout" class="button outline-button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
+    <div class="col-6 d-flex align-items-start">
+      <div id="profileControlsDesktopMobile" class="button-group">
+        <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i
+            class="fas fa-pencil-ruler"></i> See drafts</a>
+        <button type="button" class="button outline-button full-width-button" id="updateProfileButton"
+          data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
+        <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
+        <a href="/logout" class="button outline-button full-width-button"><i class="fas fa-sign-out-alt"></i> Log
+          out</a>
+      </div>
     </div>
   </div>
-</div>
-{{/if}}
+  {{/if}}
 
-<h3 class="page-header">
-  {{#if profileData.displayName }}
-  {{ profileData.displayName }}
+  <h3 class="page-header">
+    {{#if profileData.displayName }}
+    {{ profileData.displayName }}
+    {{/if}}
+    {{#if profileData.displayName }}<br /> <span
+      class="text-muted small">{{/if}}@{{ profileData.username}}{{#if profileData.displayName }}</span>{{/if}}
+    {{#or flagged flagsFromTrustedUsers}}<i class="fas fa-exclamation-triangle user-flag"></i>{{/or}}
+  </h3>
+  {{#if isOwnProfile}}
+  <div id="profileControlsTablet">
+    <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i
+        class="fas fa-pencil-ruler"></i>
+      See drafts</a>
+    <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal"
+      data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-user-circle"></i> Edit
+      profile</button>
+    <a href="/settings" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i
+        class="fas fa-cog"></i> Settings</a>
+    <a href="/logout" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i
+        class="fas fa-sign-out-alt"></i> Log out</a>
+  </div>
   {{/if}}
-  {{#if profileData.displayName }}<br /> <span
-    class="text-muted small">{{/if}}@{{ profileData.username}}{{#if profileData.displayName }}</span>{{/if}}
-  {{#or flagged flagsFromTrustedUsers}}<i class="fas fa-exclamation-triangle user-flag"></i>{{/or}}
-</h3>
-{{#if isOwnProfile}}
-<div id="profileControlsTablet">
-  <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i>
-    See drafts</a>
-  <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal"
-    data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-user-circle"></i> Edit
-    profile</button>
-  <a href="/settings" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i
-      class="fas fa-cog"></i> Settings</a>
-  <a href="/logout" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i
-      class="fas fa-sign-out-alt"></i> Log out</a>
-</div>
-{{/if}}
-{{#unless isOwnProfile}}
-<div class="user-tags">
-  {{#if userTrustsYou}}
-  <span class="tag tag-green">Trusts you</span>
+  {{#unless isOwnProfile}}
+  <div class="user-tags">
+    {{#if userTrustsYou}}
+    <span class="tag tag-green">Trusts you</span>
+    {{/if}}
+    {{#if userFollowsYou}}
+    <span class="tag tag-green">Follows you</span>
+    {{/if}}
+  </div>
+  {{/unless}}
+  {{#if profileData.aboutParsed}}
+  <section class="profile-about">
+    <p>
+      {{{profileData.aboutParsed}}}
+    </p>
+  </section>
   {{/if}}
-  {{#if userFollowsYou}}
-  <span class="tag tag-green">Follows you</span>
-  {{/if}}
-</div>
-{{/unless}}
-{{#if profileData.aboutParsed}}
-<section class="profile-about">
+  {{#if profileData.pronouns}}
   <p>
-    {{{profileData.aboutParsed}}}
+    <i class="fas fa-fw fa-user-circle"></i> {{profileData.pronouns}}
   </p>
-</section>
-{{/if}}
-{{#if profileData.pronouns}}
-<p>
-  <i class="fas fa-fw fa-user-circle"></i> {{profileData.pronouns}}
-</p>
-{{/if}}
-
-{{#if profileData.location}}
-<p>
-  <i class="fas fa-fw fa-map-marker-alt"></i> {{profileData.location}}
-</p>
-{{/if}}
-{{#if profileData.websiteParsed}}
-<p>
-  <i class="fas fa-fw fa-link"></i> {{{profileData.websiteParsed}}}
-</p>
-{{/if}}
-
-{{#unless isOwnProfile}}
-{{#if loggedIn}}
-{{#if flagsFromTrustedUsers}}
-<div class="message w-100 my-2" style="text-align:center;">
-  <i class="fas fa-exclamation-triangle"></i>
-  {{flagsFromTrustedUsers}} {{plural flagsFromTrustedUsers 'person/people'}} you trust
-  {{plural flagsFromTrustedUsers 'has/have'}} flagged this user.
-</div>
-{{/if}}
-{{#if muted}}
-<div class="message w-100 my-2" style="text-align:center;">
-  <i class="fas fa-comment-slash"></i>
-  You have muted this user. Their posts are hidden from you.
-</div>
-{{/if}}
-{{/if}} {{! End if logged in}}
-
-{{#if this.mutualTrusts}}
-<div class="message w-100 my-2" style="text-align:center;">
-  Trusted by <strong>{{this.mutualTrusts.length}}</strong> {{plural this.mutualTrusts.length 'person/people'}} you trust
-</div>
-{{/if}}
-
-{{#if this.mutualFollows}}
-<div class="message w-100 my-2" style="text-align:center;">
-  Followed by <strong>{{this.mutualFollows.length}}</strong> {{plural this.mutualFollows.length 'person/people'}} you
-  follow
-</div>
-{{/if}}
-
-{{#if this.mutualCommunities}}
-<div class="message w-100 my-2" style="text-align:center;">
-  In <strong>{{this.mutualCommunities.length}}</strong> {{plural this.mutualCommunities.length 'community/communities'}}
-  with you
-</div>
-{{/if}}
-{{/unless}} {{! End unless is own profile}}
-
-<button type="button" id="toggle-connections" class="button full-width-button user-panel-link"
-  data-target="#connectionsBody" data-shown="false" data-shown-text="<i class='fas fa-users'></i> Hide all connections"
-  data-hidden-text="<i class='fas fa-users'></i> See all connections">
-  <i class="fas fa-users"></i> See all connections
-</button>
-
-{{#unless isOwnProfile}}
-<div id="userActionsButtons" class="mb-2">
-  {{#if followed}}
-  <button type="button" id="unfollowButton" class="button grey-button"><i class="fas fa-satellite-dish"></i>
-    Unfollow</button>
-  {{else}}
-  <button type="button" id="followButton" class="button"><i class="fas fa-satellite-dish"></i> Follow</button>
   {{/if}}
-  {{#if trusted}}
-  <button type="button" id="untrustButton" class="button grey-button">
-    <i class="fas fa-lock"></i> Untrust
-  </button>
-  {{else}}
-  <button type="button" id="trustButton" class="button">
-    <i class="fas fa-lock-open"></i> Trust
-  </button>
+
+  {{#if profileData.location}}
+  <p>
+    <i class="fas fa-fw fa-map-marker-alt"></i> {{profileData.location}}
+  </p>
   {{/if}}
-  <button class="button" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-    aria-expanded="false">
-    More <i class="fas fa-caret-down"></i>
-  </button>
-  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-    {{#if flagged}}
-    <button type="button" id="unflagButton" class="dropdown-item"><i class="fas fa-fw fa-check-circle"></i>
-      Unflag</button>
-    {{else}}
-    <button type="button" id="flagButton" class="dropdown-item"><i class="fas fa-fw fa-exclamation-triangle"></i>
-      Flag</button>
-    {{/if}}
-    {{#if muted}}
-    <button type="button" id="unmuteButton" class="dropdown-item"><i class="fas fa-fw fa-check-circle"></i>
-      Unmute</button>
-    {{else}}
-    <button type="button" id="muteButton" class="dropdown-item"><i class="fas fa-fw fa-comment-slash"></i> Mute</button>
-    {{/if}}
+  {{#if profileData.websiteParsed}}
+  <p>
+    <i class="fas fa-fw fa-link"></i> {{{profileData.websiteParsed}}}
+  </p>
+  {{/if}}
+
+  {{#unless isOwnProfile}}
+  {{#if loggedIn}}
+  {{#if flagsFromTrustedUsers}}
+  <div class="message w-100 my-2" style="text-align:center;">
+    <i class="fas fa-exclamation-triangle"></i>
+    {{flagsFromTrustedUsers}} {{plural flagsFromTrustedUsers 'person/people'}} you trust
+    {{plural flagsFromTrustedUsers 'has/have'}} flagged this user.
   </div>
-</div>
-{{/unless}} {{! End unless is own profile}}
+  {{/if}}
+  {{#if muted}}
+  <div class="message w-100 my-2" style="text-align:center;">
+    <i class="fas fa-comment-slash"></i>
+    You have muted this user. Their posts are hidden from you.
+  </div>
+  {{/if}}
+  {{/if}} {{! End if logged in}}
+
+  {{#if this.mutualTrusts}}
+  <div class="message w-100 my-2" style="text-align:center;">
+    Trusted by <strong>{{this.mutualTrusts.length}}</strong> {{plural this.mutualTrusts.length 'person/people'}} you
+    trust
+  </div>
+  {{/if}}
+
+  {{#if this.mutualFollows}}
+  <div class="message w-100 my-2" style="text-align:center;">
+    Followed by <strong>{{this.mutualFollows.length}}</strong> {{plural this.mutualFollows.length 'person/people'}} you
+    follow
+  </div>
+  {{/if}}
+
+  {{#if this.mutualCommunities}}
+  <div class="message w-100 my-2" style="text-align:center;">
+    In <strong>{{this.mutualCommunities.length}}</strong>
+    {{plural this.mutualCommunities.length 'community/communities'}}
+    with you
+  </div>
+  {{/if}}
+  {{/unless}} {{! End unless is own profile}}
+
+  <button type="button" id="toggle-connections" class="button full-width-button user-panel-link"
+    data-target="#connectionsBody" data-shown="false"
+    data-shown-text="<i class='fas fa-users'></i> Hide all connections"
+    data-hidden-text="<i class='fas fa-users'></i> See all connections">
+    <i class="fas fa-users"></i> See all connections
+  </button>
+
+  {{#unless isOwnProfile}}
+  <div id="userActionsButtons" class="mb-2">
+    {{#if followed}}
+    <button type="button" id="unfollowButton" class="button grey-button"><i class="fas fa-satellite-dish"></i>
+      Unfollow</button>
+    {{else}}
+    <button type="button" id="followButton" class="button"><i class="fas fa-satellite-dish"></i> Follow</button>
+    {{/if}}
+    <div class="dropdown">
+      <button class="button" type="button" id="audienceDropdownButton" data-toggle="dropdown" aria-haspopup="true"
+        aria-expanded="false">
+        Add and remove from my audiences <i class="fas fa-caret-down"></i>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="audienceDropdownButton">
+        <a class="dropdown-item" href="#"><i class="fas fa-plus"></i> Add to Public audience</a>
+        <a class="dropdown-item" href="#"><i class="fas fa-plus"></i> Add to Private audience</a>
+        <a class="dropdown-item" href="#"><i class="fas fa-plus"></i> Add to Intimate audience</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="button" type="button" id="moreActionsButton" data-toggle="dropdown" aria-haspopup="true"
+        aria-expanded="false">
+        More actions <i class="fas fa-caret-down"></i>
+      </button>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="moreActionsButton">
+        {{#if flagged}}
+        <button type="button" id="unflagButton" class="dropdown-item"><i class="fas fa-fw fa-check-circle"></i>
+          Unflag</button>
+        {{else}}
+        <button type="button" id="flagButton" class="dropdown-item"><i class="fas fa-fw fa-exclamation-triangle"></i>
+          Flag</button>
+        {{/if}}
+        {{#if muted}}
+        <button type="button" id="unmuteButton" class="dropdown-item"><i class="fas fa-fw fa-check-circle"></i>
+          Unmute</button>
+        {{else}}
+        <button type="button" id="muteButton" class="dropdown-item"><i class="fas fa-fw fa-comment-slash"></i>
+          Mute</button>
+        {{/if}}
+      </div>
+    </div>
+  </div>
+  {{/unless}} {{! End unless is own profile}}
 </div>
