Post editor styles

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
-$text: #1a1717; // Text for light mode.
+$text: #1a1717; // Text for light mode, background for code and pre elements
 
-$background-white: #fff;
+$background-white: #fff; // Text for code and pre elements
 $background-grey: #f9f9fa; // Page background
 
 $medium-grey: #cecece; // Post borders
