--- a/scss/dark-mode.scss
+++ b/scss/dark-mode.scss
@@ -4,8 +4,9 @@
 @import 'mixins';
 @import 'typography';
 @import 'layout';
-@import 'navbar';
 @import 'forms';
+@import 'posteditor';
+@import 'navbar';
 @import 'images';
 @import 'posts-comments';
 @import 'weird-bootstrap-rules';
