--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,6 +5,7 @@
 @import 'typography';
 @import 'layout';
 @import 'forms';
+@import 'posteditor';
 @import 'navbar';
 @import 'images';
 @import 'posts-comments';
