Vue post editor code

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <section id="homeBody" class="row justify-content-center">
     <div class="col-lg-7">
-        {{> newpostform }}
+        {{> postEditor }}
         <div id="checkNewPosts"></div>
         {{> newpostsavailable}}
         <div id="postsContainer"></div>
