--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -65,3 +65,7 @@ $message-color: $dark-pink;
 $message-background: $lightest-pink;
 $message-border: $light-pink;
 
+$editor-button-text: $text;
+$editor-button-background: $background-white;
+$editor-button-selected-background: $light-grey;
+
