--- a/scss/_dark-mode-colors.scss
+++ b/scss/_dark-mode-colors.scss
@@ -61,3 +61,7 @@ $comment-background: lighten($element-background, 5.10);
 $message-color: $light-pink;
 $message-background: $comment-background;
 $message-border: $light-pink;
+
+$editor-button-text: $background-white;
+$editor-button-background: $medium-grey;
+$editor-button-selected-background: $light-grey;
