--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -257,7 +257,7 @@ small,
 code, pre {
     font-family: 'Roboto Mono', monospace;
     background-color: $text;
-    color: $background-white;
+    color: $background-grey;
     border-radius: 3px;
     padding: 0 5px;
 }
