--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -438,7 +438,7 @@ section {
 }
 
 #homeSidebar.is-affixed {
-    opacity: .4;
+    // opacity: .4;
 }
 
 #homeSidebar:hover {
@@ -458,7 +458,7 @@ section {
 
 .discovery-help-links {
     font-size: small;
-    margin-top: 0.75rem;
+    // margin-top: 0.75rem;
     display: block;
     width: 100%;
     text-align: right;
@@ -487,7 +487,7 @@ section {
 }
 
 .hashtags-list>* {
-    margin-right: 0.5rem;
+    // margin-right: 0.5rem;
 }
 
 #userActionsButtons {
